# gifply

./: README.md
android/: build.gradle  local.properties  settings.gradle
android/app/: .gitignore  build.gradle
android/app/src/androidTest/java/de/wiomoc/gifply/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/de/wiomoc/gifply/: DeviceManager.kt  GifProcessor.java  MainActivity.kt  UploadDialog.kt
android/app/src/main/res/layout/: activity_main.xml  image_tile.xml  upload_dialog.xml
android/app/src/main/res/values/: strings.xml
android/app/src/test/java/de/wiomoc/gifply/: ExampleUnitTest.kt
android/gifsicle/: CMakeLists.txt  lib.c
android/gifsicle/include/: config.h
android/gifsicle/include/lcdf/: inttypes.h
android/gifsicle/src/: clp.c  gifsicle.c  support.c
android/gradle/wrapper/: gradle-wrapper.properties
embedded/: CMakeLists.txt  gifdec.c  gifdec.h  gifply.c  ili9341_lcd.pio  scratch.py  tusb_config.h  usb_descriptors.c
